# embedded-command-processor

./: .gitignore  CMakeLists.txt  LICENSE
command_processor_c/: CMakeLists.txt  cmd_proc_buffers.h  command_functions.c  command_functions.h  command_processor.c  command_processor.h
command_processor_cpp/: CMakeLists.txt  command.cpp  command.hpp  command_processor.cpp  command_processor.hpp
tests/command_processor_c/: CMakeLists.txt  test.cpp  test_fixture.h
tests/command_processor_cpp/: CMakeLists.txt  command_functions.cpp  command_functions.hpp  test.cpp  test_fixture.h
